--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@table-library/react-table-library": "^4.1.7",
+    "@tanstack/react-query": "^5.35.5",
     "firebase": "^10.11.1",
     "flowbite-react": "^0.9.0",
     "localforage": "^1.10.0",
@@ -21,7 +22,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
