--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.35.5",
+    "axios": "^1.7.2",
     "firebase": "^10.11.1",
     "flowbite-react": "^0.9.0",
     "localforage": "^1.10.0",
